fixed gap between center bands

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,7 @@ pre{
     background-color: #FF6300;
     text-align: center;
     padding: 20px;
+    margin:0px;
 }
 
 .greet2{
@@ -53,6 +54,7 @@ pre{
     text-align: center;
     padding: 20px;
     color: #FF6300;
+ 
 }
 
 
